--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
+            <a href="recipes/bolognaise.html">Spaghetti Bolognaise</a>
+
+
+
+
+
     </body>
 
 </html>
