Create Bolognese recipe and correct wording
Create the Bolognese recipe page complete with imagery, ingredients and method. Correct some typing erros made (bolognaise-bolognese)

--- a/recipes/bolognaise.html
+++ b/recipes/bolognaise.html
@@ -2,10 +2,47 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title> bologniase-recipe</title>
+        <title> bolognese-recipe</title>
     </head>
 
     <body>
-        <h1> Spaghetti Bolognaise Recipe</h1>
+        <h1> Spaghetti Bolognese Recipe</h1>
+        <h1> <img src="../images/spaghetti-bolognaise.png"></h1>
+            <p>
+                This is a delicious, simple dish created from a combination of Jamie Oliver and Marco Pierre-White's methods. 
+                enjoy!
+            </p>
+
+        <h2> Ingredients</h2>
+            <ul>
+                <li>Beef mince - 500g</li>
+                <li>Onion - 1 large</li>
+                <li>Carrots - 2 medium, diced</li>
+                <li>Pancetta ham (Unsmoked) - 50g (One packet)</li>
+                <li>Chopped tomato - 1 can</li>
+                <li>Tomato puree - 2 tbls</li>
+                <li>Bay leaves - 3 medium</li>
+                <li>Beef/Vegetable stock - 500ml</li>
+                <li>Red wine - (Optional)</li>
+                <li>Spaghetti</li>
+                <li>Basil</li>
+                <li>Oregano</li>
+                <li>Garlic - 3 to 4 cloves</li>
+                <li>Olive oil, salt & pepper</li>
+            </ul>
+        <h2> Method </h2>
+            <ol>
+                <li>Heat 2 tbls of olive oil in a skillet or large frying pan on medium to high heat</li>
+                <li>Add the onion and garlic and cook until fragrant or the onion is translucent</li>
+                <li>Add the carrot and cook for a further 3-5 minutes or until it has started to soften</li>
+                <li>Separate the mixture to create space in the pan and add the pancetta ham, cook until browned</li>
+                <li>Add the beef mince and cook for 3-5 minutes or until browned and reduced in size</li>
+                <li>Add a splash red wine to de-glaze the pan, </li>
+                <li>Add the chopped tomatoes, tomato puree and the stock to the mixture and stir</li>
+                <li>Add the bay leaves, basil and oregano to taste, along with salt & pepper</li>
+                <li>Cook for around 30-40 minutes, meanwhile cook spaghetti according to packet instructions</li>
+                <li> Serve and enjoy!</li>
+            </ol>
+        <h4><a href="../index.html">Home</a></h4>
     </body>
 </html>
