Create images and update index.html
Create the two images required for the recipes and update the main index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-            <a href="recipes/bolognaise.html">Spaghetti Bolognaise</a>
+        <h1>Odin Recipes - You donkey!</h1>
+        <h1>
+            <img src="images/gordon-ramsey.png" alt="Image of Gordon Ramsey shouting">
+        </h1>
+
+        <h2>
+            <ul>
+                <li> <a href="recipes/bolognaise.html"> Spaghetti Bolognese</a></li>
+                <li> <a href="recipes/chicken-leek-pasta-bake.html">Chicken and leek pasta-bake</a>
+            </ul>
+        </h2>
+        
 
 
 
