Modify site to include lessons on CSS and DevTools
Update the index and recipe pages to include current lessons on chrome devtools and the CSS lessons.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
         <title> Recipe Page</title>
     </head>
 
     <body>
-        <h1>Odin Recipes - You donkey!</h1>
+        <header>Odin Recipes - You donkey!</header>
         <h1>
             <img src="images/gordon-ramsey.png" alt="Image of Gordon Ramsey shouting">
         </h1>
