--- a/recipes/bolognaise.html
+++ b/recipes/bolognaise.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
         <title> bolognese-recipe</title>
     </head>
 
     <body>
-        <h1> Spaghetti Bolognese Recipe</h1>
-        <h1> <img src="../images/spaghetti-bolognaise.png"></h1>
-            <p>
+        <header> Spaghetti Bolognese Recipe</header>
+        <h1> <img class="img-recipe" src="../images/spaghetti-bolognaise.png"></h1>
+            <p class="recipe-desc">
                 This is a delicious, simple dish created from a combination of Jamie Oliver and Marco Pierre-White's methods. 
                 enjoy!
             </p>
@@ -43,6 +45,6 @@
                 <li>Cook for around 30-40 minutes, meanwhile cook spaghetti according to packet instructions</li>
                 <li> Serve and enjoy!</li>
             </ol>
-        <h4><a href="../index.html">Home</a></h4>
+        <button class="button-footer"><a href="../index.html">Home</a></button>
     </body>
 </html>
