--- a/recipes/chicken-leek-pasta-bake.html
+++ b/recipes/chicken-leek-pasta-bake.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head> 
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Chicken-and-bacon-pastabake</title>
     </head>
 
     <body>
-        <h1>Chicken and Bacon pasta-bake</h1>
-        <h1> <img src="../images/Chicken-pastabake.png" alt="A image of a chicken pastabake"> </h1>
-            <p>This is a delicious chicken and pancetta, creamy, pasta-bake with leek and white wine!</p>
+        <header>Chicken and Bacon pasta-bake</header>
+        <h1> <img class="recipe-img" src="../images/Chicken-pastabake.png" alt="A image of a chicken pastabake"> </h1>
+            <p class="recipe-desc">This is a delicious chicken and pancetta, creamy, pasta-bake with leek and white wine!</p>
         <h2>Ingredients</h2>
             <ul>
                 <li>Chicken - 500g</li>
@@ -38,6 +39,6 @@
                      of the ricotta cheese. Cook for 20 minutes at 200c</li>
                 <li>Serve and <strong>enjoy!</strong></li>
             </ol>
-        <h4><a href="../index.html">Home</a></h4>
+        <button class="button-footer"><a href="../index.html">Home</a></button>
     </body>
 </html>
